--- a/openai-code-re-test/pom.xml
+++ b/openai-code-re-test/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>openai-code-re-sdk</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>openai-code-review-test</finalName>
