--- a/.github/workflows/main-maven-jar.yml
+++ b/.github/workflows/main-maven-jar.yml
@@ -50,10 +50,10 @@ jobs:
           echo "Repository name is ${{ env.REPO_NAME }}"
           echo "Branch name is ${{ env.BRANCH_NAME }}"
           echo "Commit author is ${{ env.COMMIT_AUTHOR }}"
-          echo "Commit message is ${{ env.COMMIT_MESSAGE }}"     
+          echo "Commit message is ${{ env.COMMIT_MESSAGE }}"      
 
-      - name: Run code Review
-        run: java -jar ./libs/openai-code-re-sdk-1.0.jar
+      - name: Run Code Review
+        run: java -jar ./libs/openai-code-review-sdk-1.0.jar
         env:
           # Github 配置；GITHUB_REVIEW_LOG_URI「https://github.com/xfg-studio-project/openai-code-review-log」、GITHUB_TOKEN「https://github.com/settings/tokens」
           GITHUB_REVIEW_LOG_URI: ${{ secrets.CODE_REVIEW_LOG_URI }}
